# zkill_batch

./: .env  .env.example  CHANGELOG.md  MTU_UPDATE_README.md  README.md  README_ISHTAR_RANKING.md  backfill_killmail_attackers.py  backfill_killmail_corporations.py  corporation_98730717_kills_20250202.json  eve_killmails.sql  ishtar_ranking_generator.py  killmail_report_generator.py  main.py  mtu_ranking_generator.py  postgresql.conf  pyproject.toml  repport_generator.py  run_mtu_ranking.sh  run_update_index.sh  template.html  update_index.py  update_index_with_ishtar.py
html/: 202501.html  index.html
scripts/: backups.sh  run_killmail.sh  run_report.sh
sql/: eve_killmails.sql  schema.mmd
src/: __init__.py
src/database/: __init__.py  connection.py
src/database/repositories/: __init__.py  system_repository.py
zkill_batch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
